--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -30,5 +30,9 @@
         <button><a href="https://student.upi.edu/home"></a>Login SIAK</button>
         <br>
         <button><a href="https://spot.upi.edu/mhs">Login SPOT</a></button>
+        <div>
+            <img src ="LogoUpi.png" width="30%" height="30%">LogoUpi</src>
+        </div>
+       
     </body>
 </html>
