--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -3,8 +3,11 @@
     <title>
         Faizal Hatemeel
     </title>
-    <body bgcolor="green">
+    <body>
         <h1>Jadwal Mata Kuliah Kelas 1A</h1>
+        <div>
+            <img src ="LogoUpi.png" width="20%" height="20%"></src>
+        </div>
         <div>
             <h3>Senin</h3>
             <ol>
@@ -30,9 +33,7 @@
         <button><a href="https://student.upi.edu/home"></a>Login SIAK</button>
         <br>
         <button><a href="https://spot.upi.edu/mhs">Login SPOT</a></button>
-        <div>
-            <img src ="LogoUpi.png" width="30%" height="30%">LogoUpi</src>
-        </div>
+       
        
     </body>
 </html>
