--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -3,7 +3,7 @@
     <title>
         Faizal Hatemeel
     </title>
-    <body>
+    <body bgcolor="cyan">
         <h1>Jadwal Mata Kuliah Kelas 1A</h1>
         <div>
             <img src ="LogoUpi.png" width="20%" height="20%"></src>
@@ -11,29 +11,57 @@
         <div>
             <h3>Senin</h3>
             <ol>
-                <li><strong>Kalkulus</strong></li><time>07:50-09:30 WIB</time><p>Raditya Muhammad M.T</p><p>gedung I3-2</p>
-                <li><strong>Pengantar RPL</strong></li><time>13:00-15:30 WIB</time><p>Dian Anggraini</p><p>Labkom Pgsd</p>
+                <li><strong>Kalkulus</strong></li>
+                <time>07:50-09:30 WIB</time>
+                <p>Raditya Muhammad M.T</p>
+                <p>gedung I3-2</p>
+                <br>
+                <li><strong>Pengantar RPL</strong></li>
+                <time>13:00-15:30 WIB</time>
+                <p>Dian Anggraini</p>
+                <p>Labkom Pgsd</p>
             </ol>
             <h3>Selasa</h3>
             <ol>
-                <li><strong>Dasar Pemrograman</strong></li><time>07:00-09:30 WIB</time><p>Indira Syawanodya M.kom</p><p>Labkom Pgsd</p>
-                <li><strong>Pengantar Multimedia</strong></li><time>10:20-12:50</time><p>Hendriyana S.T, M.kom</p><p>Labkom Pgsd</p>
+                <li><strong>Dasar Pemrograman</strong></li>
+                <time>07:00-09:30 WIB</time>
+                <p>Indira Syawanodya M.kom</p>
+                <p>Labkom Pgsd</p>
+                <br>
+                <li><strong>Pengantar Multimedia</strong></li>
+                <time>10:20-12:50</time>
+                <p>Hendriyana S.T, M.kom</p>
+                <p>Labkom Pgsd</p>
             </ol>
             <h3>Rabu</h3>
             <ol>
-                <li><strong>Pendidikan Agama Islam</strong></li><time>07:00-08:40 WIB</time><p>Asep Rudi Nurjaman M.pd</p><p>gedung D1</p>
-                <li><strong>Bahasa Inggris</strong></li><time>13:00-15:30 WIB</time><p>Winti Ananthia M.Ed</p><p>gedung D4</p>
+                <li><strong>Pendidikan Agama Islam</strong></li>
+                <time>07:00-08:40 WIB</time>
+                <p>Asep Rudi Nurjaman M.pd</p>
+                <p>gedung D1</p>
+                <br>
+                <li><strong>Bahasa Inggris</strong></li>
+                <time>13:00-15:30 WIB</time>
+                <p>Winti Ananthia M.Ed</p>
+                <p>gedung D4</p>
             </ol>
             <h3>Kamis</h3>
             <ol>
-                <li><strong>PKN</strong></li><time>10:30-12:00 WIB</time><p>Yayang Furi Furnamasari M.pd</p><p>MicroTeaching</p>
-                <li><strong>Bahasa Indonesia</strong></li><time>15:30-17:10 WIB</time><p>Dr.Yunus Abidin M.pd</p><p>gedung C5</p>
+                <li><strong>PKN</strong></li>
+                <time>10:30-12:00 WIB</time>
+                <p>Yayang Furi Furnamasari M.pd</p>
+                <p>MicroTeaching</p>
+                <br>
+                <li><strong>Bahasa Indonesia</strong></li>
+                <time>15:30-17:10 WIB</time>
+                <p>Dr.Yunus Abidin M.pd</p>
+                <p>gedung C5</p>
             </ol>
         </div>
-        <button><a href="https://student.upi.edu/home"></a>Login SIAK</button>
-        <br>
-        <button><a href="https://spot.upi.edu/mhs">Login SPOT</a></button>
-       
-       
+        <div>
+            <button><a href="https://student.upi.edu/home"></a>Login SIAK</button>
+             <br>
+             <button><a href="https://spot.upi.edu/mhs">Login SPOT</a></button>
+        </div>
     </body>
 </html>
