--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ind">
     <title>
-        Faizal Hatemeel
+        Jadwal Matakuliah
     </title>
     <body bgcolor="cyan">
         <h1>Jadwal Mata Kuliah Kelas 1A</h1>
