--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ind">
-    <title>
-        Jadwal Matakuliah
-    </title>
+    <head>
+        <title>
+            Jadwal Matakuliah
+        </title>
+    </head>
     <body bgcolor="cyan">
         <h1>Jadwal Mata Kuliah Kelas 1A</h1>
         <div>
