--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -9,6 +9,7 @@
         <h1>Jadwal Mata Kuliah Kelas 1A</h1>
         <div>
             <img src ="LogoUpi.png" width="20%" height="20%"></src>
+            <big><marquee>Jadwal Matakuliah RPL kelas 1a,<strong>Universitas Pendidikan Indonesia </strong> Kampus Daerah <strong>Cibiru</strong></marquee></big>
         </div>
         <div>
             <h3>Senin</h3>
