--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="ind">
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>
             Jadwal Matakuliah
         </title>
