--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ind">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>
             Jadwal Matakuliah
         </title>
     </head>
-    <body bgcolor="cyan">
-        <h1>Jadwal Mata Kuliah Kelas 1A</h1>
+    <body class="a">
+       <center><h1>Jadwal Mata Kuliah Kelas 1A</h1></center> 
         <div>
-            <img src ="LogoUpi.png" width="20%" height="20%"></src>
-            <big><marquee>Jadwal Matakuliah RPL kelas 1A,<strong>Universitas Pendidikan Indonesia </strong> Kampus Daerah <strong>Cibiru</strong></marquee></big>
+            <img class ="tengah" src ="LogoUpi.png" width="25%" height="25%"></src>
+            <marquee>Jadwal Matakuliah RPL kelas 1A </marquee>
+            <br>
+            <marquee><strong>Universitas Pendidikan Indonesia </strong></marquee>
+            <br>
+            <marquee>kampus daerah<strong>Cibiru</strong></marquee>
         </div>
         <div>
             <h3>Senin</h3>
