--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -12,10 +12,8 @@
         <div>
             <img class ="tengah" src ="LogoUpi.png" width="25%" height="25%"></src>
             <marquee>Jadwal Matakuliah RPL kelas 1A </marquee>
-            <br>
-            <marquee><strong>Universitas Pendidikan Indonesia </strong></marquee>
-            <br>
-            <marquee>kampus daerah<strong>Cibiru</strong></marquee>
+           <center><p><strong>Universitas Pendidikan Indonesia </strong></p></center> 
+           <center><p>kampus daerah<strong>Cibiru</strong></p></center> 
         </div>
         <div>
             <h3>Senin</h3>
