--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -11,55 +11,54 @@
        <center><h1>Jadwal Mata Kuliah Kelas 1A</h1></center> 
         <div>
             <img class ="tengah" src ="LogoUpi.png" width="25%" height="25%"></src>
-            <marquee>Jadwal Matakuliah RPL kelas 1A </marquee>
-           <center><p><strong>Universitas Pendidikan Indonesia </strong></p></center> 
-           <center><p>kampus daerah<strong>Cibiru</strong></p></center> 
+           <center><a href="https://www.upi.edu/"><strong>Universitas Pendidikan Indonesia</strong></a></center>
+           <center><p>Kampus Daerah Cibiru</p></center>
         </div>
-        <div>
-            <h3>Senin</h3>
+        <div class="a">
+            <h2>Senin</h2>
             <ol>
-                <li><strong>Kalkulus</strong></li>
+                <li><h3><strong>Kalkulus</strong></h3></li>
                 <time>07:50-09:30 WIB</time>
                 <p>Raditya Muhammad M.T</p>
                 <p>gedung I3-2</p>
                 <br>
-                <li><strong>Pengantar RPL</strong></li>
+                <li><h3><strong>Pengantar RPL</strong></h3></li>
                 <time>13:00-15:30 WIB</time>
                 <p>Dian Anggraini</p>
                 <p>Labkom Pgsd</p>
             </ol>
-            <h3>Selasa</h3>
+            <h2>Selasa</h2>
             <ol>
-                <li><strong>Dasar Pemrograman</strong></li>
+                <li><h3><strong>Dasar Pemrograman</strong></h3></li>
                 <time>07:00-09:30 WIB</time>
                 <p>Indira Syawanodya M.kom</p>
                 <p>Labkom Pgsd</p>
                 <br>
-                <li><strong>Pengantar Multimedia</strong></li>
+                <li><h3><strong>Pengantar Multimedia</strong></h3></li>
                 <time>10:20-12:50</time>
                 <p>Hendriyana S.T, M.kom</p>
                 <p>Labkom Pgsd</p>
             </ol>
-            <h3>Rabu</h3>
+            <h2>Rabu</h2>
             <ol>
-                <li><strong>Pendidikan Agama Islam</strong></li>
+                <li><h3><strong>Pendidikan Agama Islam</strong></h3></li>
                 <time>07:00-08:40 WIB</time>
                 <p>Asep Rudi Nurjaman M.pd</p>
                 <p>gedung D1</p>
                 <br>
-                <li><strong>Bahasa Inggris</strong></li>
+                <li><h3><strong>Bahasa Inggris</strong></h3></li>
                 <time>13:00-15:30 WIB</time>
                 <p>Winti Ananthia M.Ed</p>
                 <p>gedung D4</p>
             </ol>
-            <h3>Kamis</h3>
+            <h2>Kamis</h2>
             <ol>
-                <li><strong>PKN</strong></li>
+                <li><h3><strong>PKN</strong></h3></li>
                 <time>10:30-12:00 WIB</time>
                 <p>Yayang Furi Furnamasari M.pd</p>
                 <p>MicroTeaching</p>
                 <br>
-                <li><strong>Bahasa Indonesia</strong></li>
+                <li><h3><strong>Bahasa Indonesia</strong></h3></li>
                 <time>15:30-17:10 WIB</time>
                 <p>Dr.Yunus Abidin M.pd</p>
                 <p>gedung C5</p>
