--- a/Jadwal_matkul.html
+++ b/Jadwal_matkul.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ind">
+<html lang="id">
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css">
